# bysqr

./: Cargo.toml  LICENSE.md  README.md  bysquare.xsd  index.html  payment.xml  test.xml
.github/: build.yml
.github/workflows/: build.yml  release.yml
example/: payment.json  payment.xml
src/: cli.rs  encoder.rs  lib.rs  main.rs  models.rs  preview.rs  qr.rs  utils.rs
