[package]
name = "bysqr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bysqrcli"
path = "src/bin/bysqr.rs"

[features]
default = []
preview = ["eframe"]
wasm = ["wasm-bindgen"]

[dependencies]
quick-xml = { version = "0.37.2", features = ["serialize"] }
xml = "0.8.20"
serde = { version = "1.0.199", features = ["derive"] }
regex = "1.10.4"
chrono = "0.4.38"
crc32fast = "1.4.0"
liblzma = { version = "0.3.5", features = ["static"] }
qrcode = "0.14.0"
image = { version = "0.25.1", features = ["png", "jpeg"] }
clap = { version = "4.5.26", features = ["derive"] }
base64 = "0.22.1"
eframe = { version = "0.30.0", optional = true }
usvg = "0.44.0"
xmltree = "0.11.0"
resvg = "0.44.0"
jpeg-encoder = "0.6.0"
wasm-bindgen = { version = "0.2.100", optional = true }
serde_json = "1.0.135"
